--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "homepage": "https://github.com/Ma7eer/strapi-docker-gcp#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "eslint": "^7.20.0",
+    "express": "^4.17.1",
+    "i": "^0.3.6"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
