--- a/.github/workflows/node-pre-merge.js.yml
+++ b/.github/workflows/node-pre-merge.js.yml
@@ -24,3 +24,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i
+
+    - name: Run tests
+      run: npm test
