--- a/package.json
+++ b/package.json
@@ -25,17 +25,13 @@
   },
   "devDependencies": {
     "jest": "^26.6.3",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "prettier": "^2.2.1"
   },
   "jest": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
-    "express": "^4.17.1",
-    "i": "^0.3.6"
-  },
-  "devDependencies": {
-    "prettier": "^2.2.1"
   }
 }
