--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
   },
   "homepage": "https://github.com/Ma7eer/strapi-docker-gcp#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "jest": "^26.6.3",
-    "supertest": "^6.1.3"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "jest": "^26.6.3",
-    "supertest": "^6.1.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3"
   },
   "jest": {
     "testEnvironment": "node",
